--- a/Android/ArtI/app/src/main/res/layout/fragment_portfolio.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_portfolio.xml
@@ -261,9 +261,10 @@
             <ImageView
                 android:id="@+id/iv_represent_artist_1"
                 android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/temp_represent_artist"
+                android:layout_height="70dp"
+                android:layout_marginTop="20dp"
+                android:scaleType="fitXY"
+                android:visibility="gone"
                 app:layout_constraintEnd_toStartOf="@id/iv_represent_artist_2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_represent_artist" />
@@ -274,7 +275,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="Oscar_Claude Monet"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@id/iv_represent_artist_1"
                 app:layout_constraintStart_toStartOf="@id/iv_represent_artist_1"
                 app:layout_constraintTop_toBottomOf="@id/iv_represent_artist_1" />
@@ -282,11 +283,13 @@
             <ImageView
                 android:id="@+id/iv_represent_artist_2"
                 android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/temp_represent_artist"
+                android:layout_height="70dp"
+                android:layout_marginTop="20dp"
+                android:scaleType="fitXY"
+                android:visibility="gone"
                 app:layout_constraintEnd_toStartOf="@id/iv_represent_artist_3"
                 app:layout_constraintStart_toEndOf="@id/iv_represent_artist_1"
-                app:layout_constraintTop_toTopOf="@id/iv_represent_artist_1" />
+                app:layout_constraintTop_toBottomOf="@id/tv_represent_artist" />
 
             <TextView
                 android:id="@+id/tv_represent_artist_2"
@@ -294,7 +297,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="Oscar_Claude Monet"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@id/iv_represent_artist_2"
                 app:layout_constraintStart_toStartOf="@id/iv_represent_artist_2"
                 app:layout_constraintTop_toBottomOf="@id/iv_represent_artist_2" />
@@ -302,11 +305,13 @@
             <ImageView
                 android:id="@+id/iv_represent_artist_3"
                 android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/temp_represent_artist"
+                android:layout_height="70dp"
+                android:layout_marginTop="20dp"
+                android:scaleType="fitXY"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_represent_artist_2"
-                app:layout_constraintTop_toTopOf="@id/iv_represent_artist_1" />
+                app:layout_constraintTop_toBottomOf="@id/tv_represent_artist" />
 
             <TextView
                 android:id="@+id/tv_represent_artist_3"
@@ -314,7 +319,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="Oscar_Claude Monet"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@id/iv_represent_artist_3"
                 app:layout_constraintStart_toStartOf="@id/iv_represent_artist_3"
                 app:layout_constraintTop_toBottomOf="@id/iv_represent_artist_3" />
