--- a/Android/ArtI/app/src/main/res/layout/fragment_login.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_login.xml
@@ -77,7 +77,7 @@
                 android:id="@+id/login_pw_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="aa"
+                android:text="qwer1234!"
                 android:singleLine="true"
                 android:inputType="textPassword"
                 android:background="@drawable/shape_login_edit_text"
