--- a/Android/ArtI/app/src/main/res/layout/fragment_my_page.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_my_page.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -13,24 +13,24 @@
         tools:context=".ui.profile.MyPageFragment">
 
 
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.06" />
+
         <TextView
             android:id="@+id/my_page_profile_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="황병현님 어서오세요"
-            android:fontFamily="@font/inter_28pt_black"
-            android:textSize="24sp"
             android:layout_marginTop="16dp"
+            android:fontFamily="@font/inter_28pt_black"
+            android:text="황병현님 어서오세요"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/my_page_profile_modify_btn"
             app:layout_constraintStart_toStartOf="@id/guideline"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/my_page_profile_modify_btn"
@@ -141,5 +141,26 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/my_page_delete_btn"
             app:layout_constraintTop_toTopOf="@+id/my_page_delete_btn" />
+
+        <ImageView
+            android:id="@+id/iv_instagram"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/instagram"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/my_page_delete_btn" />
+
+        <TextView
+            android:id="@+id/tv_instagram"
+            style="@style/MyPageMenuText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="인스타그램 연동"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_instagram"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/iv_instagram"
+            app:layout_constraintTop_toTopOf="@+id/iv_instagram" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
