--- a/Android/ArtI/app/src/main/res/layout/fragment_search.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_search.xml
@@ -275,6 +275,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/tv_no_result_art_museum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:visibility="gone"
+                android:text="@string/no_result_artist"
+                android:fontFamily="@font/inter_18pt_bold"
+                app:layout_constraintStart_toStartOf="@id/tv_art_museum_result"
+                app:layout_constraintTop_toBottomOf="@id/tv_art_museum_result" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_art_museum_result"
                 android:layout_width="0dp"
@@ -284,7 +295,7 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_art_museum_result"
+                app:layout_constraintTop_toBottomOf="@id/tv_no_result_art_museum"
                 tools:listitem="@layout/item_art_museum" />
 
             <TextView
@@ -297,18 +308,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/rv_art_museum_result" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_art_result"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_artwork_result"
-                tools:listitem="@layout/item_art" />
-
             <TextView
                 android:id="@+id/tv_no_result_artwork"
                 android:layout_width="wrap_content"
@@ -318,7 +317,19 @@
                 android:text="@string/no_result_artist"
                 android:fontFamily="@font/inter_18pt_bold"
                 app:layout_constraintStart_toStartOf="@id/tv_artwork_result"
-                app:layout_constraintTop_toBottomOf="@id/rv_art_result" />
+                app:layout_constraintTop_toBottomOf="@id/tv_artwork_result" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_art_result"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_no_result_artwork"
+                tools:listitem="@layout/item_art" />
 
             <TextView
                 android:id="@+id/tv_artist_result"
@@ -328,7 +339,7 @@
                 android:fontFamily="@font/inter_18pt_bold"
                 android:text="@string/artist"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_no_result_artwork" />
+                app:layout_constraintTop_toBottomOf="@id/rv_art_result" />
 
             <TextView
                 android:id="@+id/tv_no_result_artist"
