feat: 검색결과 미술관 클릭 이벤트 연결

--- a/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
@@ -46,6 +46,9 @@
         <action
             android:id="@+id/action_searchFragment_to_artDetailFragment"
             app:destination="@id/artDetailFragment" />
+        <action
+            android:id="@+id/action_searchFragment_to_artMuseumFragment"
+            app:destination="@id/artMuseumFragment" />
     </fragment>
     <fragment
         android:id="@+id/artworkUploadFragment"
