fix: 회원가입, 로그인 SingleLine, 메세지 토스트 수정

--- a/Android/ArtI/app/src/main/res/layout/fragment_login.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_login.xml
@@ -55,6 +55,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="aa@aa.com"
+                android:singleLine="true"
+                android:maxLines="1"
+                android:maxLength="28"
                 android:background="@drawable/shape_login_edit_text"
                 app:layout_constraintBottom_toTopOf="@id/login_pw_tv"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -79,6 +82,8 @@
                 android:layout_height="wrap_content"
                 android:text="qwer1234!"
                 android:singleLine="true"
+                android:maxLines="1"
+                android:maxLength="20"
                 android:inputType="textPassword"
                 android:background="@drawable/shape_login_edit_text"
                 app:layout_constraintBottom_toTopOf="@id/login_btn_layout"
