--- a/Android/ArtI/app/src/main/res/layout/fragment_sign_up.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_sign_up.xml
@@ -84,6 +84,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:inputType="textEmailAddress"
+                        android:singleLine="true"
+                        android:maxLines="1"
+                        android:maxLength="28"
                         app:layout_constraintBottom_toTopOf="@id/sign_certification_tv"
                         app:layout_constraintEnd_toStartOf="@+id/sign_email_btn"
                         app:layout_constraintStart_toStartOf="parent"
@@ -117,6 +120,10 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/shape_login_edit_text"
                         android:visibility="gone"
+                        android:singleLine="true"
+                        android:maxLines="1"
+                        android:maxLength="20"
+                        android:inputType="number"
                         app:layout_constraintBottom_toTopOf="@id/sign_nick_tv"
                         app:layout_constraintEnd_toStartOf="@+id/sign_certification_btn"
                         app:layout_constraintStart_toStartOf="parent"
@@ -158,6 +165,9 @@
                         style="@style/LoginEditInput"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:maxLines="1"
+                        android:maxLength="20"
                         app:layout_constraintBottom_toTopOf="@id/sign_pw_tv"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -179,6 +189,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:inputType="textPassword"
+                        android:singleLine="true"
+                        android:maxLines="1"
+                        android:maxLength="20"
                         app:layout_constraintBottom_toTopOf="@id/sign_pw_verify_tv"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -200,6 +213,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:inputType="textPassword"
+                        android:singleLine="true"
+                        android:maxLines="1"
+                        android:maxLength="20"
                         app:layout_constraintBottom_toTopOf="@id/sign_cancel_btn"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
