--- a/Android/ArtI/app/src/main/res/layout/fragment_instargram_survey.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_instargram_survey.xml
@@ -1,46 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.survey.InstagramSurveyFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        style="@style/MyGalleryTitleText"
-        android:id="@+id/instagram_title_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="인스타 연동"
-        android:textSize="34sp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-    <TextView
-        android:id="@+id/create_gallery_name_tv"
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:text="인스타를 연동하면 내가 저장한 사진을 통해 취향을 분석해서 미술작품을 추천받을 수 있어요!"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/instagram_title_tv" />
+        android:layout_height="match_parent"
+        tools:context=".ui.survey.InstagramSurveyFragment">
+
+        <TextView
+            style="@style/MyGalleryTitleText"
+            android:id="@+id/instagram_title_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="인스타 연동"
+            android:textSize="34sp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/instagram_content_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            android:textSize="20sp"
+            android:text="인스타를 연동하면 내가 저장한 사진을 통해 취향을 분석해서 미술작품을 추천받을 수 있어요!"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/instagram_title_tv" />
 
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/create_gallery_btn"
-        style="@style/ButtonRoundShort8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="생성하기"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_gallery_theme_tv" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/instagram_btn"
+            style="@style/ButtonRoundShort20"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:text="연동하겠습니다"
+            android:layout_marginHorizontal="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/instagram_cancel_btn"
+            app:layout_constraintTop_toBottomOf="@+id/instagram_content_tv" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/instagram_cancel_btn"
+            style="@style/ButtonRoundShort20"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="아니요 괜찮아요"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginVertical="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/instagram_btn" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
