--- a/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
@@ -312,12 +312,23 @@
             app:argType="integer[]"
             app:nullable="false" />
         <action
-            android:id="@+id/action_createGallertFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            android:id="@+id/action_createGalleryFragment_to_instagramSurveyFragment"
+            app:destination="@id/instagramSurveyFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/instagramFragment"
         android:name="com.hexa.arti.ui.profile.InstagramFragment"
         android:label="InstagramFragment" />
+    <fragment
+        android:id="@+id/instagramSurveyFragment"
+        android:name="com.hexa.arti.ui.survey.InstagramSurveyFragment"
+        android:label="InstagramSurveyFragment" >
+        <action
+            android:id="@+id/action_instagramSurveyFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_instagramSurveyFragment_to_instagramFragment"
+            app:destination="@id/instagramFragment" />
+    </fragment>
 </navigation>
