--- a/Android/ArtI/app/src/main/res/layout/fragment_artwork_result.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_artwork_result.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.artwork.ArtworkResultFragment">
+
         <ImageView
             android:id="@+id/artwork_back_btn"
             android:layout_width="28dp"
@@ -53,8 +54,8 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:progress="80"
             android:layout_marginHorizontal="20dp"
+            android:progress="80"
             android:progressTint="@color/point_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,11 +75,11 @@
             android:id="@+id/artwork_result_et"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape_profile_modify_edit_text"
             android:layout_marginHorizontal="20dp"
+            android:background="@drawable/shape_profile_modify_edit_text"
+            android:hint="제목을 입력해주세요"
             android:paddingHorizontal="20dp"
             android:paddingVertical="5dp"
-            android:hint="제목을 입력해주세요"
             app:layout_constraintBottom_toBottomOf="@+id/artwork_result_tv"
             app:layout_constraintEnd_toEndOf="@+id/progressBar"
             app:layout_constraintStart_toEndOf="@+id/artwork_result_tv"
@@ -88,8 +89,8 @@
             android:id="@+id/artwork_result_img"
             android:layout_width="300dp"
             android:layout_height="240dp"
-            android:src="@drawable/gallery_sample2"
             android:layout_marginTop="30dp"
+            android:src="@drawable/gallery_sample2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/artwork_result_tv" />
@@ -109,19 +110,19 @@
             android:id="@+id/artwork_result_theme_spinner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:spinnerMode="dropdown"
             android:layout_marginHorizontal="20dp"
+            android:background="@drawable/shape_profile_modify_edit_text"
             android:paddingVertical="5dp"
-android:background="@drawable/shape_profile_modify_edit_text"
             android:popupBackground="@drawable/spinner_dropdown_pop"
+            android:spinnerMode="dropdown"
             app:layout_constraintBottom_toBottomOf="@+id/artwork_result_theme_tv"
             app:layout_constraintEnd_toEndOf="@+id/progressBar"
             app:layout_constraintStart_toEndOf="@+id/artwork_result_theme_tv"
             app:layout_constraintTop_toTopOf="@+id/artwork_result_theme_tv" />
 
         <androidx.appcompat.widget.AppCompatButton
-            style="@style/ButtonRoundShort20"
             android:id="@+id/artwork_result_btn"
+            style="@style/ButtonRoundShort20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
