--- a/Android/ArtI/app/src/main/res/layout/item_my_gallery_theme.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_my_gallery_theme.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <EditText
         android:id="@+id/theme_title_tv"
         android:layout_width="wrap_content"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
         android:layout_height="wrap_content"
-        android:text="병현이의 절망"
-        android:singleLine="true"
-        android:paddingVertical="10dp"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:focusable="false"
-        android:clickable="false"
-        android:textColor="@color/black"
-        android:background="@android:color/transparent"
-        android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="20dp"
-        app:layout_constraintEnd_toStartOf="@id/theme_kebab_menu_iv"
+        android:layout_marginVertical="10dp"
+        android:background="@android:color/transparent"
+        android:clickable="false"
+        android:focusable="false"
+        android:paddingVertical="10dp"
+        android:singleLine="true"
+        android:text="병현이의 절망"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/my_gallery_theme_gridLayout"
+        app:layout_constraintEnd_toStartOf="@id/theme_kebab_menu_iv"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,8 +29,8 @@
         android:id="@+id/theme_check_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_done_24"
         android:layout_marginStart="10dp"
+        android:src="@drawable/ic_done_24"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/theme_title_tv"
         app:layout_constraintStart_toEndOf="@+id/theme_title_tv"
@@ -46,6 +45,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/theme_title_tv"
         app:layout_constraintStart_toEndOf="@+id/theme_check_iv"
         app:layout_constraintTop_toTopOf="@+id/theme_title_tv" />
+
     <ImageView
         android:id="@+id/theme_kebab_menu_iv"
         android:layout_width="wrap_content"
@@ -58,6 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/theme_title_tv"
         app:layout_constraintTop_toTopOf="@+id/theme_title_tv" />
+
     <GridLayout
         android:id="@+id/my_gallery_theme_gridLayout"
         android:layout_width="match_parent"
@@ -70,17 +71,16 @@
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/theme_title_tv">
-    </GridLayout>
+        app:layout_constraintTop_toBottomOf="@+id/theme_title_tv"></GridLayout>
 
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/black"
         android:layout_marginHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/my_gallery_theme_gridLayout"
+        android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/my_gallery_theme_gridLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
