--- a/Android/ArtI/app/src/main/res/layout/fragment_my_gallery.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_my_gallery.xml
@@ -13,7 +13,7 @@
         tools:context=".ui.artmuseum.MyGalleryFragment">
 
 
-        <ScrollView
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent">
@@ -202,6 +202,6 @@
                     app:layout_constraintTop_toBottomOf="@+id/my_gallery_theme_tv"
                     tools:listitem="@layout/item_my_gallery_theme" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
