--- a/Android/ArtI/app/src/main/res/layout/item_select_artwork.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_select_artwork.xml
@@ -8,15 +8,16 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="4dp">
 
         <ImageView
             android:id="@+id/select_art_iv"
             android:layout_width="160dp"
             android:layout_height="200dp"
+            android:layout_margin="10dp"
             android:scaleType="centerCrop"
             android:src="@drawable/gallery_sample1"
-            android:layout_margin="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
