feat: 검색 완료시 키보드바 내리기

--- a/Android/ArtI/app/src/main/res/layout/fragment_login.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_login.xml
@@ -54,7 +54,7 @@
                 android:id="@+id/login_id_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:text="aa@aa.com"
                 android:singleLine="true"
                 android:maxLines="1"
                 android:maxLength="28"
@@ -80,7 +80,7 @@
                 android:id="@+id/login_pw_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:text="qwer1234!"
                 android:singleLine="true"
                 android:maxLines="1"
                 android:maxLength="20"
