--- a/Android/ArtI/app/src/main/res/layout/item_homepage.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_homepage.xml
@@ -31,9 +31,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.1" />
+            app:layout_constraintGuide_percent="0.12" />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cv_image"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginHorizontal="8dp"
@@ -53,6 +54,16 @@
 
         </androidx.cardview.widget.CardView>
 
+        <ImageView
+            android:id="@+id/iv_refresh"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:layout_constraintTop_toTopOf="@id/cv_image"
+            app:layout_constraintEnd_toEndOf="@id/cv_image"
+            android:src="@drawable/ic_baseline_refresh_24"
+            android:layout_margin="20dp"
+            android:elevation="5dp"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
