--- a/Android/ArtI/app/src/main/res/layout/fragment_instargram_survey.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_instargram_survey.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -12,28 +12,39 @@
         android:layout_height="match_parent"
         tools:context=".ui.survey.InstagramSurveyFragment">
 
+
+        <ImageView
+            android:id="@+id/iv_instagram"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:src="@drawable/instagram"
+            app:layout_constraintBottom_toBottomOf="@id/instagram_title_tv"
+            app:layout_constraintEnd_toStartOf="@id/instagram_title_tv"
+            app:layout_constraintTop_toTopOf="@id/instagram_title_tv" />
+
         <TextView
-            style="@style/MyGalleryTitleText"
             android:id="@+id/instagram_title_tv"
+            style="@style/MyGalleryTitleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="인스타 연동"
             android:textSize="34sp"
-            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/instagram_content_tv"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
+            android:text="    인스타그램을 연동하여\n 작품추천 받으시겠습니까?"
             android:textSize="20sp"
-            android:text="인스타를 연동하면 내가 저장한 사진을 통해 취향을 분석해서 미술작품을 추천받을 수 있어요!"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/instagram_title_tv" />
 
 
@@ -42,12 +53,12 @@
             style="@style/ButtonRoundShort20"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
             android:layout_marginVertical="20dp"
             android:text="연동하겠습니다"
-            android:layout_marginHorizontal="30dp"
+            app:layout_constraintBottom_toTopOf="@+id/instagram_cancel_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/instagram_cancel_btn"
             app:layout_constraintTop_toBottomOf="@+id/instagram_content_tv" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -55,9 +66,9 @@
             style="@style/ButtonRoundShort20"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="아니요 괜찮아요"
             android:layout_marginHorizontal="30dp"
             android:layout_marginVertical="20dp"
+            android:text="아니요 괜찮아요"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/instagram_btn" />
