feat: 이미지 생성

--- a/Android/ArtI/app/src/main/res/layout/fragment_create_gallery.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_create_gallery.xml
@@ -44,6 +44,7 @@
             android:hint="생성할 미술관의 이름을 작성해주세요."
             android:maxLength="16"
             android:maxLines="1"
+            android:singleLine="true"
             android:paddingEnd="8dp"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="@+id/create_gallery_name_tv"
@@ -98,6 +99,8 @@
             android:hint="미술관 소개를 작성해주세요"
             android:textColor="@color/black"
             android:textSize="18sp"
+            android:maxLines="1"
+            android:singleLine="true"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="@+id/create_gallery_info_tv"
             app:layout_constraintEnd_toEndOf="parent"
@@ -123,6 +126,8 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="normal"
+            android:maxLines="1"
+            android:singleLine="true"
             app:layout_constraintBottom_toBottomOf="@+id/create_gallery_theme_tv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/create_gallery_theme_tv"
