--- a/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
@@ -330,9 +330,11 @@
         android:label="InstagramSurveyFragment" >
         <action
             android:id="@+id/action_instagramSurveyFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_instagramSurveyFragment_to_instagramFragment"
-            app:destination="@id/instagramFragment" />
+            app:destination="@id/instagramFragment"/>
     </fragment>
 </navigation>
