--- a/Android/ArtI/app/src/main/res/layout/fragment_login.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_login.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/login_background">
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_total"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/trans_cover_color"
