hotfix: 미술관 내부페이지 메뉴에 미술관 명 적용

--- a/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
@@ -106,6 +106,12 @@
             app:argType="integer">
 
         </argument>
+        <argument
+            android:name="galleryName"
+            android:defaultValue="1"
+            app:argType="string">
+
+        </argument>
         <action
             android:id="@+id/action_artGalleryDetailFragment_to_artDetailFragment"
             app:destination="@id/artDetailFragment" />
