hotfix: 미술관 미술 제목 규격수정

--- a/Android/ArtI/app/src/main/res/layout/fragment_art_museum.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_art_museum.xml
@@ -62,11 +62,13 @@
                         android:id="@id/tv_art_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
                         android:layout_marginTop="20dp"
                         android:fontFamily="@font/inter_18pt_bold"
-                        android:text="@string/art"
+                        android:paddingHorizontal="40dp"
+                        android:text="dsalp,dsapl,sad,pldsa,plsdapl,sda,pldasplkmadssad"
                         android:textSize="20sp"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/iv_bookmark"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
